--- a/style.css
+++ b/style.css
@@ -1,3 +1,52 @@
-h1, h2 {
-  font-family: Lato;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet');
+
+* {
+  box-sizing: border-box; /* If we add any border, padding to an element it does not effectr the width of it*/
+}
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow-y: hidden;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  width: 90vw;
+}
+
+.panel {
+  background-size: auto 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 10px;
+  height: 80vh;
+  color: aliceblue;
+  border-radius: 50px;
+  cursor: pointer;
+  position: relative;
+  flex: 0.5;
+  transition: flex 0.5s ease-in;
+}
+
+.panel h3 {
+  font-size: 20px;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  opacity: 0;
+}
+
+.panel.active {
+  flex: 5;
+}
+
+.panel.active h3 {
+  opacity: 1;
 }
