--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet');
-
 * {
-  box-sizing: border-box; /* If we add any border, padding to an element it does not effectr the width of it*/
+  box-sizing: border-box;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center; /*it centers the content corresponding to the height of the flex-box */
-  height: 100vh;
-  overflow-y: hidden;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
 }
 
 .container {
@@ -20,30 +18,30 @@ body {
 }
 
 .panel {
-  background-size: auto 100%;
-  background-position: center;
-  background-repeat: no-repeat;
   margin: 10px;
-  height: 80vh;
-  color: aliceblue;
-  border-radius: 50px;
-  cursor: pointer;
+  padding: 30px;
+  width: 20%;
+  height: 800px;
+  font-family: monospace;
   position: relative;
-  flex: 0.5;
-  transition: flex 0.5s ease-in;
-}
-
-.panel h3 {
-  font-size: 20px;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  margin: 0;
-  opacity: 0;
+  border-radius: 50px;
+  transition: all 0.4s ease;
+  background-repeat: no-repeat;
 }
 
 .panel.active {
-  flex: 5;
+  width: 80%;
+  border-radius: 50px;
+  opacity: 1;
+}
+
+.panel h3 {
+  position: absolute;
+  bottom: 5%;
+  left: 2%;
+  color: beige;
+  opacity: 0;
+  transition: all 0.4s ease;
 }
 
 .panel.active h3 {
