--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   border-radius: 50px;
   transition: all 0.4s ease;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .panel.active {
